[gd_scene load_steps=18 format=2]

[ext_resource path="res://objects/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Boss.gd" type="Script" id=2]
[ext_resource path="res://sprites/boss.sprites/boss0.tres" type="Texture" id=3]
[ext_resource path="res://sprites/boss.sprites/boss5.tres" type="Texture" id=4]
[ext_resource path="res://sprites/boss.sprites/boss6.tres" type="Texture" id=5]
[ext_resource path="res://sprites/boss.sprites/boss7.tres" type="Texture" id=6]
[ext_resource path="res://sprites/boss.sprites/boss1.tres" type="Texture" id=7]
[ext_resource path="res://sprites/boss.sprites/boss2.tres" type="Texture" id=8]
[ext_resource path="res://sprites/boss.sprites/boss3.tres" type="Texture" id=9]
[ext_resource path="res://sprites/boss.sprites/boss4.tres" type="Texture" id=10]
[ext_resource path="res://sounds/165394__shawnyboy__heavy-machine-gun.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/boss-shot.wav" type="AudioStream" id=12]
[ext_resource path="res://objects/BossSimpleFire.tres" type="Animation" id=13]
[ext_resource path="res://objects/BossSuperFire.tres" type="Animation" id=14]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "fire1",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ) ],
"loop": false,
"name": "fire2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30, 14 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 400, 130 )

[node name="Boss" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]

editor/display_folded = true
frames = SubResource( 1 )
offset = Vector2( -32, -32 )

[node name="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Vision" index="0"]

visible = true
position = Vector2( 0, -50 )
shape = SubResource( 5 )

[node name="StandardFire" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 11 )
volume_db = -4.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="SuperFire" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="7"]

position = Vector2( 0, -10 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AttackAnimation" type="AnimationPlayer" parent="." index="8"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/BossSimpleFire = ExtResource( 13 )
anims/BossSuperFire = ExtResource( 14 )
blend_times = [  ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]

[connection signal="animation_finished" from="AttackAnimation" to="." method="_on_AttackAnimation_animation_finished"]


